--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "cookie": "^0.6.0",
     "framer-motion": "^10.16.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/cookie": "^0.5.4",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
