--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@studio-freight/lenis": "^1.0.29",
     "axios": "^1.6.2",
     "cookie": "^0.6.0",
     "framer-motion": "^10.16.4",
