Fixed the bugs listed by tester

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@emotion/styled": "^11.11.0",
     "@studio-freight/lenis": "^1.0.29",
     "axios": "^1.6.2",
+    "chakra-dayzed-datepicker": "^0.2.10",
     "cookie": "^0.6.0",
+    "date-fns": "^2.30.0",
+    "dayzed": "^3.2.3",
     "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.1",
