--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
